<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:hapticFeedbackEnabled="false"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="@drawable/glossy"
    android:gravity="start">

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000">
    </TextView>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TitleLabel"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_title_string" 
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="#ff000000"
        style="?android:attr/borderlessButtonStyle">

        <requestFocus />
    </EditText>

    <!-- Status -->

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:text="@string/status_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000" />

    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/statusDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_string"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle" />

        <RadioButton
            android:id="@+id/statusNotDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/not_done_string"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle" />
    </RadioGroup>

    <!-- Priority -->

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/statusGroup"
        android:layout_marginTop="30dp"
        android:text="@string/priority_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000" />

    <RadioGroup
        android:id="@+id/priorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priority"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/priority_string" >

        <RadioButton
            android:id="@+id/lowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low_string"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle" />

        <RadioButton
            android:id="@+id/medPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/priority_medium_string"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle" />

        <RadioButton
            android:id="@+id/highPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high_string"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle"/>
    </RadioGroup>

    <!-- Time and Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priorityGroup"
        android:layout_marginTop="30dp"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="10dp"
        android:text="@string/no_date_set_string"
        android:layout_marginLeft="25dp"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="10dp"
        android:text="@string/no_time_set_string"
        android:layout_marginRight="35dp"
        android:textColor="#ff000000" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:text="@string/choose_date_string"
        android:textColor="#ff000000"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker_button"
        android:layout_below="@id/time"
        android:text="@string/choose_time_string"
        android:textColor="#ff000000"
        style="?android:attr/borderlessButtonStyle"/>

    <!-- Buttons -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker_button"
        android:layout_alignRight="@+id/time_picker_button"
        android:layout_alignEnd="@+id/time_picker_button"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_string"
            android:layout_above="@+id/submitButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_string"
            android:layout_above="@+id/submitButton"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/submit_string"
            android:layout_weight="1"
            android:textColor="#ff000000"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</RelativeLayout>